<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".Signup">


    <!--First Name Input-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Personal Details"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="start"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="First Name">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="380dp"
        android:layout_height="80dp"

        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Last Name">
    </TextView>

    <!--Last Name Input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="380dp"
        android:layout_height="80dp"

        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Contact Number">
    </TextView>

    <!--Phone Input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/baseline_call_24"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Date of Birth">
    </TextView>

    <Button
        android:id="@+id/datePickerButton"
        android:background="@drawable/buttontwo_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="Select date of birth"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        style="?android:spinnerStyle"
        android:onClick="openDatePicker"/>

    <!--Signup-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignup"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/poppins_bold"
        android:padding="14dp"
        android:text="Signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />



</LinearLayout>